name:                parakei
version:             0.1.0.0
synopsis:            wei
description:         wei
homepage:            https://github.com/ryota-ka/parakei#readme
license:             BSD3
license-file:        LICENSE
author:              Ryota Kameoka
maintainer:          kameoka.ryota@gmail.com
copyright:           2017 Ryota Kameoka
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable parakei
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , authenticate-oauth
                     , bytestring
                     , http-conduit
                     , random
                     , text
                     , transformers
                     , twitter-conduit
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ryota-ka/parakei
